fixed drawer z-index issue

--- a/app/elements/deck-builder/deck-builder.sass
+++ b/app/elements/deck-builder/deck-builder.sass
@@ -16,8 +16,12 @@
     color: #CFCFCF
     radius: 5px
 
+core-header-panel
+  z-index: 1000
+
 .window
   overflow-y: auto
+  z-index: 0
   base-card
     width: 100px
     &.is-dragging
